--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "protonemedia/laravel-paddle": "^2.4",
-        "spatie/laravel-flash": "^1.9"
+        "spatie/laravel-flash": "^1.9",
+        "wildbit/swiftmailer-postmark": "^3.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
